--- a/examples/greenmode.css
+++ b/examples/greenmode.css
@@ -23,7 +23,7 @@ h1
 body
 {
     overflow:hidden;
-    background-color: #0d240a;
+    background: linear-gradient(to left bottom, #051937, #004d7a, #008793, #00bf72, #a8eb12) fixed;
     display: flex;
 }
 
@@ -185,7 +185,60 @@ body
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
   }
+  .container3{
+    place-items: center;
 
+    left: 25%;
+    top: 150px;
+}
+.container3{
+    position: relative;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 2em;
+    width: 400px;
+    border: none;
+    outline: none;
+    color: white;
+    background: rgba(255, 255, 255, 0.372);
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 70px;
+    font-family: 'Raleway', sans-serif;
+  }
+  .container3:before{
+    position: absolute;
+    content: '';
+    top: -2px;
+    left: -2px;
+    height: 254px;
+    width: 404px;
+    border-radius: 5px;
+    z-index: -1;
+    opacity: 0;
+    filter: blur(5px);
+    background: linear-gradient(45deg, #059408, #6aa90c, #fffb00, #04ff00, #aeff00);
+    background-size: 400%;
+    transition: opacity .3s ease-in-out;
+    animation: animate 20s linear infinite;
+  }
+  .container3:hover:before{
+    opacity: 1;
+  }
+  .container3:hover:active{
+    background: none;
+  }
+  .container3:hover:active:before{
+    filter: blur(2px);
+  }
+  @keyframes animate {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+  }
 .transition-fade{
   opacity:1;
   transition:500ms;
